--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                 </div>
                 <div class="col-md-6">
                     <p class="lead">
-                        A **JN AUTO SERVIÇOS LTDA** é uma empresa especializada em reboque de motocicletas, veículos leves e utilitários. Atuando há um ano no mercado, nossa missão é **oferecer serviços de qualidade, segurança e confiabilidade para nossos clientes.**
+                        A JN AUTO SERVIÇOS LTDA é uma empresa especializada em reboque de motocicletas, veículos leves e utilitários. Atuando há um ano no mercado, nossa missão é <b>oferecer serviços de qualidade, segurança e confiabilidade para nossos clientes.</b>
+                    
                     </p>
                     <p>
                         Trabalhamos com veículos modernos e seguros, sempre prontos para atender com agilidade e confiança.
