--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-md-6">
                     <p class="lead">
-                        A JN AUTO SERVIÇOS LTDA é uma empresa especializada em reboque de motocicletas, veículos leves e utilitários. Atuando há um ano no mercado, nossa missão é <b>oferecer serviços de qualidade, segurança e confiabilidade para nossos clientes.</b>
+                        A <strong>JN AUTO SERVIÇOS</strong> LTDA é uma empresa especializada em reboque de motocicletas, veículos leves e utilitários. Atuando há um ano no mercado, nossa missão é<strong> <b>oferecer serviços de qualidade, segurança e confiabilidade para nossos clientes.</b></strong>
                     
                     </p>
                     <p>
